# SPL_ass3_Server-Client

./: readme.txt
Client/: CMakeLists.txt  makefile
Client/include/: connectionHandler.h  readMessage.h  writeMessage.h
Client/src/: connectionHandler.cpp  echoClient.cpp  readMessage.cpp  writeMessage.cpp
Server/: pom.xml
Server/src/main/java/bgu/spl/net/api/bidi/: Connections.java
Server/src/main/java/bgu/spl/net/impl/BGSServer/: BidiMessagingProtocolImpl.java  ConnectionsImpl.java  DB.java  MessageEncoderDecoderImpl.java  ReactorMain.java  TPCMain.java  User.java
Server/src/main/java/bgu/spl/net/impl/BGSServer/Messages/: ACK.java  Block.java  Error.java  Follow.java  Login.java  Logout.java  Logstat.java  Message.java  Notification.java  PM.java  Post.java  Register.java  Stat.java
Server/src/main/java/bgu/spl/net/impl/echo/: EchoClient.java  EchoClientfollow.java  LineMessageEncoderDecoder.java
Server/src/main/java/bgu/spl/net/impl/rci/: ObjectEncoderDecoder.java
Server/src/main/java/bgu/spl/net/srv/: BaseServer.java  BlockingConnectionHandler.java  ConnectionHandler.java  NonBlockingConnectionHandler.java  Reactor.java  Server.java
